RESOLVED FIXED168360
REGRESSION(r183937): Fullscreen Exit animation missing mask
https://bugs.webkit.org/show_bug.cgi?id=168360
Summary REGRESSION(r183937): Fullscreen Exit animation missing mask
Jer Noble
Reported 2017-02-15 00:59:57 PST
REGRESSION(r183937): Fullscreen Exit animation missing mask
Attachments
Patch (4.07 KB, patch)
2017-02-15 01:02 PST, Jer Noble
no flags
Jer Noble
Comment 1 2017-02-15 01:02:24 PST
WebKit Commit Bot
Comment 2 2017-02-15 14:45:39 PST
Comment on attachment 301591 [details] Patch Clearing flags on attachment: 301591 Committed r212398: <http://trac.webkit.org/changeset/212398>
WebKit Commit Bot
Comment 3 2017-02-15 14:45:46 PST
All reviewed patches have been landed. Closing bug.
Jer Noble
Comment 4 2017-02-15 20:23:24 PST
*** Bug 168407 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.